refactor: Use OpenRewrite to migrate to Java 21